--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/mahbuq/back-integral-desafio-m03#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^1.25.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
